# casestudy1

data/resources/: style.css
data/resources/ui/: account_add.ui  account_details_page.ui  account_row.ui  camera.ui  error_revealer.ui  keyring_error_dialog.ui  preferences.ui  preferences_camera_page.ui  preferences_password_page.ui  provider_image.ui  provider_page.ui  provider_row.ui  providers_dialog.ui  providers_list.ui  shortcuts.ui  window.ui
src/: application.rs  config.rs.in  main.rs  meson.build  schema.rs  utils.rs
src/backup/: aegis.rs  andotp.rs  bitwarden.rs  freeotp.rs  freeotp_json.rs  google.rs  legacy.rs  mod.rs  raivootp.rs
src/backup/tests/: aegis_encrypted.json  aegis_issuer_from_name.json  aegis_plain.json  andotp_plain.json  bitwarden.json  freeotp_json.json
src/models/: account.rs  accounts.rs  algorithm.rs  database.rs  keyring.rs  mod.rs  otp.rs  otp_uri.rs  provider.rs  providers.rs  search_provider.rs  settings.rs
src/widgets/: camera.rs  camera_row.rs  error_revealer.rs  keyring_error_dialog.rs  mod.rs  progress_icon.rs  url_row.rs  window.rs
src/widgets/accounts/: add.rs  details.rs  mod.rs  qrcode_paintable.rs  row.rs
src/widgets/preferences/: camera_page.rs  mod.rs  password_page.rs  window.rs
src/widgets/providers/: dialog.rs  dialog_row.rs  image.rs  list.rs  mod.rs  page.rs  row.rs
